--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        h1{
+            text-align: center;
+            color: lemonchiffon;
+        }
+    </style>
     <h1>我的首頁</h1>
 </body>
 </html>
