--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <style>
         h1{
             text-align: center;
-            color: lemonchiffon;
+            color: lightblue;
+        }
+        body{
+            background: url("69905729_p17_master1200.jpg");
         }
     </style>
     <h1>我的首頁</h1>
+    
 </body>
 </html>
