增加作品練習

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
             color: lightblue;
         }
         body{
+            align-items: center;
             background: url("69905729_p17_master1200.jpg");
         }
     </style>
     <h1>我的首頁</h1>
-    
+    <tr>
+        <h2>作品集</h2>
+        <a href="https://github.com/WhiteWingDragon/WhiteWingDragon.github.io">網頁丙級練習</a>
+    </tr>
 </body>
 </html>
