--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
             align-items: center;
             background: url("69905729_p17_master1200.jpg");
         }
+        tr{
+            text-align: left;
+            margin: 10px auto;
+            background-color: lightcoral;
+        }
     </style>
     <h1>我的首頁</h1>
+    <br>
+    <h2>作品集</h2>
     <tr>
-        <h2>作品集</h2>
         <a href="https://github.com/WhiteWingDragon/WhiteWingDragon.github.io">網頁丙級練習</a>
     </tr>
 </body>
