--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
             text-align: center;
             color: lightblue;
         }
+        h2{
+            font-size: 50px;
+            color: whitesmoke;
+            font-family: '標楷體';
+        }
         body{
+            text-align: center;
             align-items: center;
             background: url("69905729_p17_master1200.jpg");
         }
         tr{
             text-align: left;
             margin: 10px auto;
+        }
+        tr>a{
             background-color: lightcoral;
         }
     </style>
