--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             align-items: center;
             background: url("69905729_p17_master1200.jpg");
         }
-        tr{
+        div{
             text-align: left;
             margin: 10px auto;
         }
@@ -33,8 +33,10 @@
     <h1>我的首頁</h1>
     <br>
     <h2>作品集</h2>
-    <tr>
-        <a href="https://github.com/WhiteWingDragon/WhiteWingDragon.github.io">網頁丙級練習</a>
-    </tr>
+    <div class="flex-container">
+        <div>
+            <a href="https://github.com/WhiteWingDragon/WhiteWingDragon.github.io">網頁丙級練習</a>
+        </div>
+    </div>
 </body>
 </html>
