--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
             background: url("69905729_p17_master1200.jpg");
         }
         div{
+            flex-basis: 200px;
+            height: 100px;
+            margin: 10px auto;
+            background-color: aliceblue;
             text-align: left;
             margin: 10px auto;
         }
-        tr>a{
+        div>a{
             background-color: lightcoral;
         }
     </style>
