--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             background: url("69905729_p17_master1200.jpg");
         }
         div{
-            flex-basis: 200px;
-            height: 100px;
-            margin: 10px auto;
+            width: 100px;
+            margin: 10px ;
             background-color: aliceblue;
-            text-align: left;
-            margin: 10px auto;
+            text-align: center;
+            line-height: 75px;
+            font-size: 30px;
         }
         div>a{
             background-color: lightcoral;
