--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             background: url("69905729_p17_master1200.jpg");
         }
         div{
-            width: 200px;
-            margin: 10px ;
+            flex-basis: 200px;
+            height: 100px;
+            margin: 10px auto;
             background-color: aliceblue;
-            text-align: center;
-            line-height: 75px;
-            font-size: 20px;
+            text-align: left;
+            margin: 10px auto;
         }
         div>a{
             background-color: lightcoral;
