--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               <img src="assets/img/portfolio/post.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/post.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="picture 1"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="職訓宣傳海報"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
             </div>
@@ -373,7 +373,7 @@
               <img src="assets/img/portfolio/vote.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/vote.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
-                  title="Web 1"><i class="bx bx-plus"></i></a>
+                  title="投票系統"><i class="bx bx-plus"></i></a>
                 <a href="http://220.128.133.15/s1110213/votesystem/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -384,7 +384,7 @@
               <img src="assets/img/portfolio/trippost.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/trippost.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="picture 2"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="旅遊海報宣傳"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
             </div>
@@ -395,7 +395,7 @@
               <img src="assets/img/portfolio/animate-api.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/animate-api.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="串API技術練習"><i class="bx bx-plus"></i></a>
                 <a href="http://220.128.133.15/s1110213/assets/api/api.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -591,7 +591,7 @@
 
       </div>
     </section><!-- End Testimonials Section -->
-    <section id="testimonials" class="testimonials section-bg">
+    <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -613,7 +613,7 @@
                 <h3>卡米那</h3>
                 <h4>天元突破紅蓮螺嚴</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
@@ -626,7 +626,7 @@
                 <h3>魯路修·蘭佩洛基</h3>
                 <h4>Code Geass 反叛的魯路修</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
@@ -639,7 +639,7 @@
                 <h3>板田銀時</h3>
                 <h4>銀魂</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
@@ -652,7 +652,7 @@
                 <h3>李洛克</h3>
                 <h4>火影忍者</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item
 
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
@@ -665,14 +665,14 @@
                 <h3>愛德華‧艾立克</h3>
                 <h4>鋼之煉金術師</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>End testimonial item
 
           </div>
           <div class="swiper-pagination"></div>
         </div>
 
-      </div>
-    </section><!-- End Testimonials Section -->
+      </div> -->
+    <!-- </section>End Testimonials Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
