--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                 <h2>其他</h2>
                 <ul>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>生日:</strong> <span>9月26號</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>興趣:</strong> <span>看ACG相關作品、讀小說、看Vtuber</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>興趣:</strong> <span>看ACG相關作品、讀小說、聽日文歌曲</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>個性:</strong> <span>文靜</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>喜好:</strong> <span>甜點、打電玩遊戲</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>喜好:</strong> <span>甜點、享受電玩遊戲</span></li>
                 </ul>
               </div>
             </div>
@@ -196,7 +196,7 @@
 
         <div class="section-title">
           <h2>技能</h2>
-          <p>如果能將自己的能力轉化成數值的話，我想應該是7成多的熟悉度吧。對於學程式方面來說我學的還不多和熟悉，希望自己能持續增強寫程式的能力。</p>
+          <p>如果能將自己的能力轉化成數值的話，我想應該是8成的熟悉度吧。對於學程式方面來說我學的還不多和熟悉，希望自己能持續增強寫程式的能力。</p>
         </div>
 
         <div class="row skills-content">
@@ -204,25 +204,25 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">75%</i></span>
+              <span class="skill">HTML <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">75%</i></span>
+              <span class="skill">CSS <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">JavaScript <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -232,9 +232,9 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">75%</i></span>
+              <span class="skill">PHP <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -247,9 +247,9 @@
             </div> -->
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">75%</i></span>
+              <span class="skill">Photoshop <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -288,7 +288,7 @@
               <h4>大學時期</h4>
               <h5>2017 - 2020</h5>
               <!-- <p><em>Rochester Institute of Technology, Rochester, NY</em></p> -->
-              <p>因直考分發的關係，成了金門大學的學生，讀的科系是運動與休閒學系。雖然在那邊遇到一堆爛事，但同時也遇到了能影響一生的朋友們，去金門讀書最大的收穫就是認識那群朋友。</p>
+              <p>因直考分發的關係，成了金門大學的學生，讀的科系是運動與休閒學系。雖然在那邊遇到一堆不愉快的事，但同時也遇到了能影響一生的朋友們，去金門讀書最大的收穫就是認識那群朋友。</p>
             </div>
             <div class="resume-item">
               <h4>職訓所時期</h4>
@@ -407,7 +407,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="http://220.128.133.15/s1110213/test02/index.php" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div> -->
